@@ -7,11 +7,11 @@ my string $connstr;
 switch (gethostname()) {
     case /^qube/: $connstr = "oracle:omquser2/omquser2@qube"; break;
     case /^el6/:
-	case /^quark/: $connstr = "oracle:omquser/omquser@el6"; break;
+    case /^quark/: $connstr = "oracle:omquser/omquser@el6"; break;
     case /^el5/:
     case /^xbox/:
     case /^ren/: $connstr = "oracle:omquser/omquser@xbox"; break;
-  default: $connstr = "oracle:omqtest/omqtest@stimpy"; break;
+    default: $connstr = "oracle:omqtest/omqtest@stimpy"; break;
 }
 
 my Datasource $db($connstr);
