@@ -16,6 +16,9 @@ version 3.2
 * fixed a major bug where a lost connection during an SQL operation using
   named types could cause a crash due to the database-specific private context
   becoming invalid and then used after deletion
+* fixed a major bug where a crash generated internally in the OCI library
+  would occur when NTYs were bound in a prepared statement and the statement
+  was executed in a new logon session after transparent reconnection
 
 
 ***********
